refactor: 블랙잭 게임 초기에 2장으로 초기 카드 전달하는 편의 메서드 추가
addCard만으로했을때보다 메서드는 늘어납니다. 하지만 이렇게 함으로써 좀더 명확하게 동작을 명시할 수 있는 장점이 있습니다.